<resources>
    <string name="app_name">Dynamo Fitness</string>
    <string name="next">NEXT</string>
    <string name="female">FEMALE</string>
    <string name="male">MALE</string>
    <string name="select_gender">SELECT GENDER:</string>
    <string name="hi">HI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beginner_workouts">BEGINNER WORKOUTS</string>
    <string name="select_day">Select Day</string>

    <string name="tab_label_1">Beginner</string>
    <string name="tab_label_2">Intermediate</string>
    <string name="tab_label_3">Advanced</string>

    <string name="tab_label_4">Beginner</string>
    <string name="tab_label_5">Intermediate</string>
    <string name="tab_label_6">Advanced</string>

    <string name="these_workouts_take_15_mins">These workouts take 15 mins</string>
    <string name="day">DAY</string>
    <string name="workout_short_description">Workout Short Description</string>

    <string name="dayImg">
        <item>@drawable/day1</item>
        <item>@drawable/day2</item>
        <item>@drawable/day3</item>
        <item>@drawable/day4</item>
        <item>@drawable/day5</item>
        <item>@drawable/day6</item>
        <item>@drawable/day7</item>
        <item>@drawable/day8</item>
        <item>@drawable/day9</item>
        <item>@drawable/day10</item>
        <item>@drawable/day1</item>
        <item>@drawable/day2</item>
        <item>@drawable/day3</item>
        <item>@drawable/day4</item>
        <item>@drawable/day5</item>
        <item>@drawable/day6</item>
        <item>@drawable/day7</item>
        <item>@drawable/day8</item>
        <item>@drawable/day9</item>
        <item>@drawable/day1</item>
        <item>@drawable/day2</item>
        <item>@drawable/day3</item>
        <item>@drawable/day4</item>
        <item>@drawable/day5</item>
        <item>@drawable/day6</item>
        <item>@drawable/day7</item>
        <item>@drawable/day8</item>
        <item>@drawable/day9</item>
        <item>@drawable/day1</item>
        <item>@drawable/day2</item>

    </string>
    <string name="intermediate_workouts">INTERMEDIATE WORKOUTS</string>
    <string name="advanced_workouts">ADVANCED WORKOUTS</string>
    <string-array name="day">
        <item>Day 1</item>
        <item>Day 2</item>
        <item>Day 3</item>
        <item>Day 4</item>
        <item>Day 5</item>
        <item>Day 6</item>
        <item>Day 7</item>
        <item>Day 8</item>
        <item>Day 9</item>
        <item>Day 10</item>
        <item>Day 11</item>
        <item>Day 12</item>
        <item>Day 13</item>
        <item>Day 14</item>
        <item>Day 15</item>
        <item>Day 16</item>
        <item>Day 17</item>
        <item>Day 18</item>
        <item>Day 19</item>
        <item>Day 20</item>
        <item>Day 21</item>
        <item>Day 22</item>
        <item>Day 23</item>
        <item>Day 24</item>
        <item>Day 25</item>
        <item>Day 26</item>
        <item>Day 27</item>
        <item>Day 28</item>
        <item>Day 29</item>
        <item>Day 30</item>

    </string-array>

    <string-array name="dayDesc">
        <item>Day 1</item>
        <item>Day 2</item>
        <item>Day 3</item>
        <item>Day 4</item>
        <item>Day 5</item>
        <item>Day 6</item>
        <item>Day 7</item>
        <item>Day 8</item>
        <item>Day 9</item>
        <item>Day 10</item>
        <item>Day 11</item>
        <item>Day 12</item>
        <item>Day 13</item>
        <item>Day 14</item>
        <item>Day 15</item>
        <item>Day 16</item>
        <item>Day 17</item>
        <item>Day 18</item>
        <item>Day 19</item>
        <item>Day 20</item>
        <item>Day 21</item>
        <item>Day 22</item>
        <item>Day 23</item>
        <item>Day 24</item>
        <item>Day 25</item>
        <item>Day 26</item>
        <item>Day 27</item>
        <item>Day 28</item>
        <item>Day 29</item>
        <item>Day 30</item>

    </string-array>
</resources>