<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@color/teal_700">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"

            android:paddingBottom="10dp"
            android:adjustViewBounds="true"
            />

        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textColor="#FFFF00"
            android:layout_alignBottom="@id/recipe_image"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            />
        <TextView
            android:id="@+id/recipe_prep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/these_workouts_take_15_mins"
            android:textColor="?android:textColorSecondary"
            android:layout_below="@id/recipe_title"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_time"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:drawableLeft="@drawable/ic_time" />


        <!--        Add a horizontal line-->
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/recipe_prep"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/recipe_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout_short_description"
            android:textColor="@color/dark2"
            android:layout_below="@id/divider"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_marginTop="3dp"
            android:textStyle="italic"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            />


    </RelativeLayout>

</androidx.cardview.widget.CardView>